# SpectroscopicObservationDetector

./: .env.sample  .gitignore  README.md  evaluate.py  main.py  pyproject.toml  requirements.txt  resume.py  test.py
callbacks/: EvaluateCOCOMetricsCallback.py
src/: check_corrupted.py  evaluate.py  exportForJS.py  main.py  plot.py  png_to_jpg.py  resume.py  test.py
src/callbacks/: EvaluateCOCOMetricsCallback.py
src/utils/: loadFiles.py  prepare.py  resize.py  visualize.py
tensorboard/logdir/train/: events.out.tfevents.1771530352.DESKTOP-7UC3PQD.6736.0.v2  events.out.tfevents.1772031491.MacBook-Air-de-Santiago.local.46613.0.v2  events.out.tfevents.1772031600.MacBook-Air-de-Santiago.local.46861.0.v2  events.out.tfevents.1772032035.MacBook-Air-de-Santiago.local.47078.0.v2  events.out.tfevents.1772032131.MacBook-Air-de-Santiago.local.47251.0.v2  events.out.tfevents.1772032789.MacBook-Air-de-Santiago.local.47443.0.v2  events.out.tfevents.1772033103.MacBook-Air-de-Santiago.local.47980.0.v2  events.out.tfevents.1772033213.MacBook-Air-de-Santiago.local.48249.0.v2  events.out.tfevents.1772033508.MacBook-Air-de-Santiago.local.48451.0.v2  events.out.tfevents.1772033595.MacBook-Air-de-Santiago.local.48692.0.v2  events.out.tfevents.1772033685.MacBook-Air-de-Santiago.local.48895.0.v2  events.out.tfevents.1772033774.MacBook-Air-de-Santiago.local.49051.0.v2  events.out.tfevents.1772033978.MacBook-Air-de-Santiago.local.49260.0.v2  events.out.tfevents.1772034797.MacBook-Air-de-Santiago.local.49570.0.v2  (+38 more)
utils/: loadFiles.py  parse.py  resize.py  visualize.py
(+47 files in other folders)
