[project]
name = "spectroscopicobservationdetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "keras-cv",
    "matplotlib==3.10.8",
    "opencv-python==4.8.1.78",
    "tensorflow[and-cuda]==2.16.1",
    "pycocotools==2.0.11",
    "setuptools==80.9.0",
]

[tool.uv.sources]
keras-cv = { git = "https://github.com/keras-team/keras-cv", rev = "94b0a551d03ee9de3d81663e2c1a680cb113f7f1" }
